tiptopdeployments/ACC-tiptopservicesapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiptopservicesapi
  labels:
    app: tiptopservicesapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiptopservicesapi
  template:
    metadata:
      labels:
        app: tiptopservicesapi
    spec:
      containers:
      - name: tiptopservicesapi
        image: k8sregistry.duckdns.org/kpntiptopservicesapi:accv1.1
        resources:
          limits:
            memory: 1Gi
            cpu: "1"
        command: ["dotnet"]
        args: ["KPN.TipTop.Services.API.dll"]
        workingDir: /app
        ports:
        - containerPort: 51669
        - containerPort: 44369
        volumeMounts:
        - name: app
          mountPath: /app
        - name: dataprotection-keys
          mountPath: /root/.aspnet/DataProtection-Keys
        - name: https
          mountPath: /root/.aspnet/https 
        - name: usersecrets
          mountPath: /root/.microsoft/usersecrets
        - name: netcoreapp31
          mountPath: /netcoreapp3.1
      volumes:
      - name: app
        azureFile:
          secretName: tiptop-pvc-secret
          shareName: app
          readOnly: false 
      - name: dataprotection-keys
        azureFile:
          secretName: tiptop-pvc-secret
          shareName: dataprotection-keys
          readOnly: false
      # - name: dataprotection-keys
      #   configMap:
      #     name: dataprotection-keys
      - name: https
        configMap:
          name: https
        # azureFile:
        #   secretName: tiptop-pvc-secret
        #   shareName: https
        #   readOnly: false
      - name: usersecrets
        configMap:
          name: usersecrets
        # azureFile:
        #   secretName: tiptop-pvc-secret
        #   shareName: usersecrets
        #   readOnly: false
      - name: netcoreapp31
        azureFile:
          secretName: tiptop-pvc-secret
          shareName: netcoreapp31
          readOnly: false
