tiptopdeployments/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    run: db
spec:
  ports:
  - port: 1433
    protocol: TCP
  selector:
    run: db
