tiptopdeployments/ttnginx-sevice.yml
apiVersion: v1
kind: Service
metadata:
  name: ttnginx
  labels:
    run: ttnginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: ttnginx
