tiptopdeployments/ttnginx-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ttnginx
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/override-frontend-port: "80"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ttnginx
          servicePort: 80
